fix: Remove unused params from bulkPopulateEntityFieldTags, fix fallback merge in addDerivedTagsGracefully